# sandbox-well-known

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: deploy.yaml  pre-commit.yaml
html/: .gitignore
src/: consent_configuration.py  consent_request_token.py  consent_token.py  dataspace_configuration.py  party_configuration.py
templates/js/: base.html  breadcrumbs.html  macro_restriction.html  schema_doc.css  schema_doc.js  section_array.html  section_conditional_subschema.html  section_not.html  section_undocumented_required_properties.html  tabbed_section.html
