[tool.poetry]
name = "well-known-docs"
version = "0.1.0"
description = ""
authors = ["IOXIO"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
typer = "^0.6.1"
json-schema-for-humans = "^0.42.1"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
